# chaffnet

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  package.json  pyproject.toml
.github/workflows/: ci.yml  container.yml  npm-publish.yml
crates/chaffnet-core/: Cargo.toml
crates/chaffnet-core/data/: spam-ip-ranges.txt
crates/chaffnet-core/src/: assessment.rs  classifier.rs  classifier_onnx.rs  config.rs  content.rs  engine.rs  features.rs  fingerprint.rs  lib.rs  model_features.rs  reputation.rs  reputation_hosted.rs  reputation_local.rs  rules.rs
crates/chaffnet-core/tests/: engine_integration.rs  hosted_reputation.rs
crates/chaffnet-eval/: Cargo.toml
crates/chaffnet-eval/src/: evaluator.rs  export.rs  lib.rs  main.rs  metrics.rs  record.rs
crates/chaffnet-eval/tests/: regression.rs
crates/chaffnet-eval/tests/fixtures/: regression.jsonl
crates/chaffnet-server/: Cargo.toml
crates/chaffnet-server/src/: api_types.rs  app.rs  auth.rs  healthcheck.rs  lib.rs  main.rs  openapi.rs
crates/chaffnet-server/src/routes/: check.rs  feedback.rs  meta.rs  mod.rs
crates/chaffnet-server/tests/: healthcheck.rs  http_integration.rs
docs/: hosted.md  mcp.md
eval/: sources.json
models/: spam-residual-v1.json  spam-residual-v1.onnx
reputation/: README.md  snapshot.json  sources.json
scripts/: fetch_eval_data.py  fetch_reputation_data.py  train_spam_model.py
scripts/tests/: test_fetch_eval_data.py  test_fetch_reputation_data.py  test_train_spam_model.py
