[workspace]
resolver = "2"
members = [
    "crates/chaffnet-core",
    "crates/chaffnet-eval",
    "crates/chaffnet-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/iuliandita/chaffnet"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2"
thiserror = "1"
tracing = "0.1"
