[package]
name = "chaffnet-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Spam and AI-slop classification engine for user-generated content."

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
redb = "2"
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["std", "tracing", "download-binaries", "tls-rustls", "copy-dylibs", "api-24"] }
sha2 = { workspace = true }
siphasher = "1"

[dev-dependencies]
serde_json = { workspace = true }
