[package]
name = "chaffnet-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Evaluation and calibration harness for chaffnet classifiers."

[dependencies]
chaffnet-core = { path = "../chaffnet-core" }
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
tempfile = "3"
thiserror = { workspace = true }
