[package]
name = "chaffnet-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP server exposing the chaffnet engine."

[dependencies]
chaffnet-core = { path = "../chaffnet-core" }
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
thiserror = { workspace = true }
utoipa = { version = "5", features = ["axum_extras"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[lib]
name = "chaffnet_server"
path = "src/lib.rs"
